block groups missing; before changing to 4 digit census tracts

--- a/acs data.ipynb
+++ b/acs data.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-09-30T17:57:21.642264200Z",
-     "start_time": "2023-09-30T17:57:21.625798800Z"
+     "end_time": "2023-10-03T20:06:55.679214Z",
+     "start_time": "2023-10-03T20:06:55.679214Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "acs_variables = {\n",
@@ -64,6 +64,11 @@
     "    'B19001_003E': 'household_income_15k_19k',\n",
     "    'B19001_004E': 'household_income_19k_25k',\n",
     "    'B19001_005E': 'household_income_25k_30k',\n",
+    "    'B06011_001E': 'median_income_last_12_months',\n",
+    "    'B16010_001E': 'education_base',\n",
+    "    'B16010_002E': 'education_less_than_high_school',                   \n",
+    "    'B16010_041E': 'education_college_or_higher',\n",
+    "    \n",
     "    \n",
     "}\n",
     "\n",
@@ -81,22 +86,22 @@
     "\n",
     "predicates = {} \n",
     "predicates['get']=','.join(get_vars)\n",
-    "predicates['for']= 'block group:*'\n",
+    "predicates['for']= 'tract:*'\n",
     "\n",
     "predicates['key']=CENSUS_API_KEY"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-30T17:28:28.797706800Z",
-     "start_time": "2023-09-30T17:28:28.786405400Z"
+     "end_time": "2023-10-03T20:06:58.575432500Z",
+     "start_time": "2023-10-03T20:06:58.561953900Z"
     }
    },
    "id": "c49242701a27d583"
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -120,30 +125,73 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-30T17:27:39.371889800Z",
-     "start_time": "2023-09-30T17:27:35.927030700Z"
+     "end_time": "2023-10-03T20:07:09.131259Z",
+     "start_time": "2023-10-03T20:07:05.737915200Z"
     }
    },
    "id": "ff46d594995d004"
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-30T17:12:23.896018800Z",
-     "start_time": "2023-09-30T17:12:23.870370300Z"
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01\n",
+      "02\n",
+      "04\n",
+      "05\n",
+      "06\n",
+      "08\n",
+      "09\n",
+      "10\n",
+      "12\n",
+      "13\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n"
+     ]
     }
-   },
-   "id": "94fb434f5ab948b8"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   ],
    "source": [
     "master_df = pd.DataFrame()\n",
     "\n",
@@ -161,24 +209,28 @@
     "    master_df = pd.concat([master_df, df], ignore_index=True)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T20:11:01.593610200Z",
+     "start_time": "2023-10-03T20:07:34.306405500Z"
+    }
    },
    "id": "f9ecf815deb893b2"
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "outputs": [],
    "source": [
-    "output_file_path = \"C:/Users/dratnadiwakara2/Documents/OneDrive - Louisiana State University/Raw Data/Dewey/acs_block_data.csv.gz\" \n",
+    "output_file_path = \"C:/Users/dratnadiwakara2/Documents/OneDrive - Louisiana State University/Raw Data/Dewey/acs_tract_data_2.csv.gz\" \n",
     "with gzip.open(output_file_path, 'wt', encoding='utf-8') as gzipped_file:\n",
     "    master_df.to_csv(gzipped_file, index=False)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-30T17:57:43.209693700Z",
-     "start_time": "2023-09-30T17:57:30.029154500Z"
+     "end_time": "2023-10-03T20:11:25.169772500Z",
+     "start_time": "2023-10-03T20:11:19.292153600Z"
     }
    },
    "id": "b19fe3c7f57a1d2f"
