block groups missing; before changing to 4 digit census tracts

--- a/py data clean/01_extract acs data.ipynb
+++ b/py data clean/01_extract acs data.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-03T20:06:55.679214Z",
-     "start_time": "2023-10-03T20:06:55.679214Z"
+     "end_time": "2023-10-24T14:04:05.643997500Z",
+     "start_time": "2023-10-24T14:03:54.269183800Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "acs_variables = {\n",
@@ -56,20 +56,30 @@
     "    'B22010_001E': 'received_food_stamps_snap_base',\n",
     "    'B22010_002E': 'received_food_stamps_snap_yes',\n",
     "    'B19113_001E': 'median_family_income', #many missing values\n",
-    "    'B19001_014E': 'household_income_100_125k',\n",
-    "    'B19001_015E': 'household_income_125_150k',\n",
-    "    'B19001_016E': 'household_income_150_200k',\n",
-    "    'B19001_017E': 'household_income_200k_more',\n",
-    "    'B19001_002E': 'household_income_10k_15k',\n",
-    "    'B19001_003E': 'household_income_15k_19k',\n",
-    "    'B19001_004E': 'household_income_19k_25k',\n",
-    "    'B19001_005E': 'household_income_25k_30k',\n",
+    "    # 'B19001_014E': 'household_income_100_125k',\n",
+    "    # 'B19001_015E': 'household_income_125_150k',\n",
+    "    # 'B19001_016E': 'household_income_150_200k',\n",
+    "    # 'B19001_017E': 'household_income_200k_more',\n",
+    "    # 'B19001_002E': 'household_income_10k_15k',\n",
+    "    # 'B19001_003E': 'household_income_15k_19k',\n",
+    "    # 'B19001_004E': 'household_income_19k_25k',\n",
+    "    # 'B19001_005E': 'household_income_25k_30k',\n",
     "    'B06011_001E': 'median_income_last_12_months',\n",
     "    'B16010_001E': 'education_base',\n",
     "    'B16010_002E': 'education_less_than_high_school',                   \n",
     "    'B16010_041E': 'education_college_or_higher',\n",
-    "    \n",
-    "    \n",
+    "    'B08128_001E': 'employment_type_base',\n",
+    "    'B08128_003E': 'employment_type_salaried_pvt_for_profit',\n",
+    "    'B08128_004E': 'employment_type_self_employed_inc',\n",
+    "    'B08128_009E': 'employment_type_self_employed_not_inc',\n",
+    "    'B08128_006E': 'employment_type_local_govt',\n",
+    "    'B08128_007E': 'employment_type_state_govt',\n",
+    "    'B08128_008E': 'employment_type_federal_govt',\n",
+    "    'B25129_001E': 'moved_base',\n",
+    "    'B25129_003E': 'moved_after_2015_oo',\n",
+    "    'B25129_039E': 'moved_after_2015_ro',\n",
+    "    'B25129_031E': 'moved_before_1989_oo',\n",
+    "    'B25129_067E': 'moved_before_1989_ro',\n",
     "}\n",
     "\n",
     "get_vars = list(acs_variables.keys())\n",
@@ -93,15 +103,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T20:06:58.575432500Z",
-     "start_time": "2023-10-03T20:06:58.561953900Z"
+     "end_time": "2023-10-24T14:09:18.781246400Z",
+     "start_time": "2023-10-24T14:09:18.776311200Z"
     }
    },
    "id": "c49242701a27d583"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -125,15 +135,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T20:07:09.131259Z",
-     "start_time": "2023-10-03T20:07:05.737915200Z"
+     "end_time": "2023-10-24T14:09:25.087895700Z",
+     "start_time": "2023-10-24T14:09:22.052674300Z"
     }
    },
    "id": "ff46d594995d004"
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -211,26 +221,51 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T20:11:01.593610200Z",
-     "start_time": "2023-10-03T20:07:34.306405500Z"
+     "end_time": "2023-10-24T14:12:49.120006700Z",
+     "start_time": "2023-10-24T14:09:28.700648700Z"
     }
    },
    "id": "f9ecf815deb893b2"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'get': 'B01001_001E,B01002_001E,B11001_002E,B25001_001E,B25003_001E,B25003_002E,B25003_003E,B25087_001E,B25087_002E,B19127_001E,B02001_001E,B02001_002E,B08303_001E,C16002_001E,C16002_002E,C16002_003E,B25065_001E,B28011_001E,B28011_008E,B28011_002E,B28003_001E,B28003_002E,B28003_004E,B27010_001E,B27010_002E,B27010_051E,B17010_001E,B17010_002E,B22010_001E,B22010_002E,B19113_001E,B19001_014E,B19001_015E,B19001_016E,B19001_017E,B19001_002E,B19001_003E,B19001_004E,B19001_005E,B06011_001E,B16010_001E,B16010_002E,B16010_041E,B08128_001E,B08128_003E,B08128_004E,B08128_009E,B08128_006E,B08128_007E,B08128_008E,B25129_001E,B25129_003E,B25129_039E,B25129_031E,B25129_067E',\n 'for': 'tract:*',\n 'key': '06b232797e7854aad802d7c7d8673c337fe1b29a'}"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicates"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-24T14:06:41.607996200Z",
+     "start_time": "2023-10-24T14:06:41.578358200Z"
+    }
+   },
+   "id": "6b38f9ab2e7c74c1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "outputs": [],
    "source": [
-    "output_file_path = \"C:/Users/dratnadiwakara2/Documents/OneDrive - Louisiana State University/Raw Data/Dewey/acs_tract_data_2.csv.gz\" \n",
+    "output_file_path = \"C:/Users/dratnadiwakara2/Documents/OneDrive - Louisiana State University/Raw Data/Dewey/acs_tract_data_3.csv.gz\" \n",
     "with gzip.open(output_file_path, 'wt', encoding='utf-8') as gzipped_file:\n",
     "    master_df.to_csv(gzipped_file, index=False)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T20:11:25.169772500Z",
-     "start_time": "2023-10-03T20:11:19.292153600Z"
+     "end_time": "2023-10-24T14:18:39.702365800Z",
+     "start_time": "2023-10-24T14:18:31.673303800Z"
     }
    },
    "id": "b19fe3c7f57a1d2f"
