--- a/py data clean/05_data_ai_sod_name_match.ipynb
+++ b/py data clean/05_data_ai_sod_name_match.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-18T15:57:08.297329700Z",
-     "start_time": "2023-11-18T15:57:08.288842400Z"
+     "end_time": "2023-11-25T03:29:15.429927100Z",
+     "start_time": "2023-11-25T03:29:15.425430Z"
     }
    },
    "outputs": [],
@@ -20,58 +20,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "outputs": [],
    "source": [
-    "stopwords = ['of', 'and', ',', 'national association', 'na', '&', '-', '.', 'corporation', 'company', 'n.a.', 'inc.', 'inc', 'ssb', 'the']"
+    "replacewords = ['-', '.','&']"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-25T03:29:17.711469400Z",
+     "start_time": "2023-11-25T03:29:17.703272300Z"
+    }
    },
    "id": "98d97a5f493cb807"
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "def address_similarity(address1, address2):\n",
-    "    stopwords = ['of','and',',','national association','na', '&','-','.','corporation','company','n.a.','inc.','inc','ssb','the']\n",
-    "    # stop_words = set(stopwords.words('english'))\n",
+    "    stopwords = ['of', 'and', ',', 'national association', 'na', 'corporation', 'company', 'n.a.', 'inc.', 'inc', 'ssb', 'the']\n",
+    "    \n",
     "    address1_tokens = [word.lower() for word in address1.split() if word.lower() not in stopwords]\n",
     "    address2_tokens = [word.lower() for word in address2.split() if word.lower() not in stopwords]\n",
+    "    return fuzz.ratio(' '.join(address1_tokens), ' '.join(address2_tokens))\n",
+    "   # return fuzz.ratio(address1, address2)\n",
     "\n",
-    "    return fuzz.ratio(' '.join(address1_tokens), ' '.join(address2_tokens))"
+    "# def address_similarity(address1, address2):\n",
+    "#     stopwords = ['of','and',',','national association','na', '&','-','.','corporation','company','n.a.','inc.','inc','ssb','the']\n",
+    "#     # stop_words = set(stopwords.words('english'))\n",
+    "#     address1_tokens = [word.lower() for word in address1.split() if word.lower() not in stopwords]\n",
+    "#     address2_tokens = [word.lower() for word in address2.split() if word.lower() not in stopwords]\n",
+    "# \n",
+    "#     return fuzz.ratio(' '.join(address1_tokens), ' '.join(address2_tokens))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-18T15:57:16.182738500Z",
-     "start_time": "2023-11-18T15:57:16.174250Z"
+     "end_time": "2023-11-25T03:29:38.596133600Z",
+     "start_time": "2023-11-25T03:29:38.587900700Z"
     }
    },
    "id": "327b6f8c2ad29613"
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "outputs": [],
    "source": [
-    "data_ai_file = \"C:/Users/dratnadiwakara2/Documents/OneDrive - Louisiana State University/Raw Data/Dewey/data_ai_data_cleaned.csv\" \n",
-    "data_ai = pd.read_csv(data_ai_file)"
+    "data_ai_file = \"C:/Users/dratnadiwakara2/Documents/OneDrive - Louisiana State University/Projects/Dewey/data/data_ai/data_ai_data_cleaned.csv\" \n",
+    "data_ai = pd.read_csv(data_ai_file)\n",
+    "\n",
+    "data_ai['Company_Name'] = data_ai['Company_Name'].str.lower()\n",
+    "\n",
+    "for sw in replacewords:\n",
+    "    data_ai['Company_Name'] = data_ai['Company_Name'].str.replace(sw, ' ')\n",
+    "\n",
+    "data_ai['Company_Name'] = data_ai['Company_Name'].str.replace('  ', ' ')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-18T15:57:19.093698100Z",
-     "start_time": "2023-11-18T15:57:19.049884700Z"
+     "end_time": "2023-11-25T03:29:41.847007700Z",
+     "start_time": "2023-11-25T03:29:41.799223700Z"
     }
    },
    "id": "ea49ef1d15f2c284"
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "sod_file = \"C:/Users/dratnadiwakara2/Documents/OneDrive - Louisiana State University/Raw Data/SOD/data/ALL_2022.csv\" \n",
@@ -82,47 +101,33 @@
     "\n",
     "bank_names_file =\"C:/Users/dratnadiwakara2/Documents/OneDrive - Louisiana State University/Projects/Dewey/data/bank_names.csv\"\n",
     "bank_names = pd.read_csv(bank_names_file, encoding='latin1')\n",
-    "sod = pd.concat([sod, bank_names], axis=0)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-18T16:07:00.771504600Z",
-     "start_time": "2023-11-18T16:06:59.558027600Z"
-    }
-   },
-   "id": "6141794a74d9e710"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [
+    "sod = pd.concat([sod, bank_names], axis=0)\n",
+    "\n",
     "sod['bank_name'] = sod['bank_name'].str.lower()\n",
     "\n",
-    "for sw in stopwords:\n",
-    "    sod['bank_name'] = sod['bank_name'].str.replace(sw, '')\n",
+    "for sw in replacewords:\n",
+    "    sod['bank_name'] = sod['bank_name'].str.replace(sw, ' ')\n",
     "\n",
     "sod['bank_name'] = sod['bank_name'].str.replace('  ', ' ')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-18T16:07:02.722922400Z",
-     "start_time": "2023-11-18T16:07:02.643013300Z"
+     "end_time": "2023-11-25T03:29:49.447966900Z",
+     "start_time": "2023-11-25T03:29:47.739430Z"
     }
    },
-   "id": "f144814449aeada2"
+   "id": "6141794a74d9e710"
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11033/11033 [36:28<00:00,  5.04it/s] \n"
+      "100%|██████████| 11033/11033 [35:58<00:00,  5.11it/s]\n"
      ]
     }
    ],
@@ -135,7 +140,7 @@
     "            for index2, row2 in data_ai.iterrows():\n",
     "                try:\n",
     "                        similarity_score = address_similarity(row1['bank_name'], row2['Company_Name'])\n",
-    "                        if similarity_score >= 50:# & row1['bank_name'][:3].lower() == row2['Company_Name'][:3].lower(): \n",
+    "                        if similarity_score >= 75:# & row1['bank_name'][:3].lower() == row2['Company_Name'][:3].lower(): \n",
     "                            output_file.write(f\"{row1['bank_name']}|{row1['RSSDID']}|{row2['Company_Name']}|{row2['App']}|{row2['App_Name']}|{similarity_score}\\n\")\n",
     "                except:\n",
     "                    pass\n",
@@ -144,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-18T15:06:04.258850600Z",
-     "start_time": "2023-11-18T14:29:35.549052600Z"
+     "end_time": "2023-11-25T04:05:50.936750800Z",
+     "start_time": "2023-11-25T03:29:52.787501500Z"
     }
    },
    "id": "e0c046b7bf762939"
