--- a/py data clean/01_all_us_poi.ipynb
+++ b/py data clean/01_all_us_poi.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import requests\n",
@@ -28,8 +28,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-07T13:16:19.395080300Z",
-     "start_time": "2023-10-07T13:16:19.208542Z"
+     "end_time": "2024-01-30T20:23:02.701717700Z",
+     "start_time": "2024-01-30T20:22:56.863218400Z"
     }
    },
    "id": "c04019341671704a"
@@ -39,13 +39,13 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "poi_csv_path = 'C:/Users/dratnadiwakara2/Downloads/temp_dewey/all_us_poi.csv'"
+    "poi_csv_path = 'C:/Users/dratnadiwakara2/Downloads/temp_dewey/all_us_poi_with_store_id.csv'"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-07T13:12:30.111856Z",
-     "start_time": "2023-10-07T13:12:30.099125900Z"
+     "end_time": "2024-01-30T20:23:15.703395100Z",
+     "start_time": "2024-01-30T20:23:15.602665900Z"
     }
    },
    "id": "8a63e15ed7fb7999"
@@ -65,21 +65,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-07T13:14:20.976031800Z",
-     "start_time": "2023-10-07T13:14:19.630320Z"
+     "end_time": "2024-01-30T20:23:20.348737Z",
+     "start_time": "2024-01-30T20:23:18.775897100Z"
     }
    },
    "id": "597ac84abcff2572"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 64/64 [16:28<00:00, 15.45s/it]\n"
+      "100%|██████████| 64/64 [32:05<00:00, 30.09s/it]\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
     "        pbar.update(1)\n",
     "    \n",
     "        df = pd.read_csv(BytesIO(requests.get(link_data['link']).content), compression=\"gzip\")\n",
-    "        df = df[df['ISO_COUNTRY_CODE'] == 'US'][['CATEGORY_TAGS', 'CITY', 'LATITUDE','LONGITUDE','NAICS_CODE','PLACEKEY','POSTAL_CODE','REGION','STREET_ADDRESS','SUB_CATEGORY','TOP_CATEGORY','LOCATION_NAME']]\n",
+    "        df = df[df['ISO_COUNTRY_CODE'] == 'US'][['CATEGORY_TAGS', 'CITY', 'LATITUDE','LONGITUDE','NAICS_CODE','PLACEKEY','POSTAL_CODE','REGION','STREET_ADDRESS','SUB_CATEGORY','TOP_CATEGORY','LOCATION_NAME','STORE_ID','WEBSITE']]\n",
     "        # df = df[(df['TOP_CATEGORY'] == 'Depository Credit Intermediation') | (df['NAICS_CODE'].astype(str).str[:3] == '522')]\n",
     "        df = df.reset_index()\n",
     "    \n",
@@ -109,8 +109,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-07T13:42:07.344633900Z",
-     "start_time": "2023-10-07T13:17:26.552813600Z"
+     "end_time": "2024-01-30T21:19:26.002363900Z",
+     "start_time": "2024-01-30T20:23:34.254761500Z"
     }
    },
    "id": "1c46ba0647eae440"
