--- a/r analysis/poi_sod_merge_stats.Rmd
+++ b/r analysis/poi_sod_merge_stats.Rmd
@@ -117,7 +117,8 @@ sod[match==1,
 
 ```{r}
 t <- sod[,
-          .(match_no_pct=mean(match),
+          .(no_of_branches=.N,
+            match_no_pct=mean(match),
             deposits_t = sum(DEPSUMBR),
             deposits_y = sum(DEPSUMBR[match == 1])
             ),
@@ -129,6 +130,9 @@ t[,c("deposits_t","deposits_y"):=list(NULL)]
 print(t)
 ```
 
+```{r}
+stargazer(t,summary = F,rownames = F)
+```
 
 
 ```{r}
@@ -150,6 +154,26 @@ t[,c("deposits_t","deposits_y"):=list(NULL)]
 us_states <- merge(us_states,t,by.x="id",by.y="statefips")
 
 ```
+
+```{r}
+ggplot()+
+ geom_polygon(data=us_states, aes(x=long,y=lat,group=group),fill=NA,color='gray40')+
+  geom_point(data=sod[SIMS_LONGITUDE< -66.9 & SIMS_LONGITUDE> -124.74 & SIMS_LATITUDE> 24.52 & SIMS_LATITUDE < 49.4],aes(y=SIMS_LATITUDE,x=SIMS_LONGITUDE,color=factor(match)),size=0.7)+
+ scale_color_manual(
+    name = "",
+    values = c("1" = "seagreen", "0" = "indianred3"),
+    labels = c("1" = "Matched branch", "0" = "Unmatched branch")
+  ) +
+ guides(color = guide_legend(override.aes = list(size = 3))) + 
+  theme_minimal()+
+  theme(axis.title = element_blank(),
+    axis.text = element_blank(),
+    axis.ticks = element_blank(),
+    legend.position = "bottom",
+    panel.grid = element_blank()
+  ) 
+```
+
 
 
 
@@ -177,26 +201,6 @@ ggplot()+
         legend.position = "bottom",panel.grid = element_blank())+ guides(fill=guide_legend(title="Match Amt Frac"))
 ```
 
-
-
-```{r}
-ggplot()+
- geom_polygon(data=us_states, aes(x=long,y=lat,group=group),fill=NA,color='gray40')+
-  geom_point(data=sod[SIMS_LONGITUDE< -66.9 & SIMS_LONGITUDE> -124.74 & SIMS_LATITUDE> 24.52 & SIMS_LATITUDE < 49.4],aes(y=SIMS_LATITUDE,x=SIMS_LONGITUDE,color=factor(match)),size=0.7)+
- scale_color_manual(
-    name = "",
-    values = c("1" = "seagreen", "0" = "indianred3"),
-    labels = c("1" = "Matched branch", "0" = "Unmatched branch")
-  ) +
- # scale_fill_gradientn(colors=c("ivory1","honeydew1","darkseagreen3","darkturquoise","dodgerblue","dodgerblue4"))+
-  theme_minimal()+
-  theme(axis.title = element_blank(),
-    axis.text = element_blank(),
-    axis.ticks = element_blank(),
-    legend.position = "bottom",
-    panel.grid = element_blank()
-  ) 
-```
 
 
 # Diagnosis
